--- a/build.gradle
+++ b/build.gradle
@@ -22,9 +22,9 @@ apply plugin: 'org.parchmentmc.librarian.forgegradle'
 apply plugin: 'org.spongepowered.mixin'
 
 
-version = '1.0'
-group = 'com.yourname.modid' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
-archivesBaseName = 'modid'
+version = '1.0-dev'
+group = 'me.paypur.scaffoldingoverhaul' // http://maven.apache.org/guides/mini/guide-naming-conventions.html
+archivesBaseName = 'scaffoldingoverhaul'
 
 // Mojang ships Java 17 to end users in 1.18+, so your mod should target Java 17.
 java.toolchain.languageVersion = JavaLanguageVersion.of(17)
